--- a/Playment-Task/app/src/main/res/values/colors.xml
+++ b/Playment-Task/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="canvasColor">#f9f6f6</color>
+    <color name="drawColor">#9a195fd9</color>
 </resources>
