--- a/Playment-Task/app/src/main/res/layout/activity_playment.xml
+++ b/Playment-Task/app/src/main/res/layout/activity_playment.xml
@@ -1,31 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
-
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
+<RelativeLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#ffffff">
 
-    android:layout_height="match_parent"
 
-    android:background="#FFFFFF"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:orientation="vertical" >
+        xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    <com.playment.playmenttask.CanvasView
+        xmlns:custom="http://schemas.android.com/apk/res-auto"
+
+        android:id="@+id/frame_layout"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/canvas_view"/>
+
+        android:layout_height="595dp"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="49dp"
+        android:background="#FFFFFF"
+        android:orientation="vertical">
+
+        <com.playment.playmenttask.CanvasView
+            android:id="@+id/canvas_view"
+            android:layout_width="match_parent"
+            android:layout_height="719dp"
+             />
+
+    </FrameLayout>
+
+    <SeekBar
+
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="top|right" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="bottom|center"
-        android:text="Calcualte Coordinates"
+        android:background="@color/colorPrimary"
         android:onClick="calculateCoordinates"
-        />
-
-
-</FrameLayout>
+        android:text="Calcualte Coordinates"
+        android:textColor="@color/canvasColor" />
+</RelativeLayout>
